background color implementato

--- a/html-london-trip.html
+++ b/html-london-trip.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-london-trip</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body> 
+<body>
     <header> <!--Sono il mastro pasticcere-->
         <h1>Il mio Viaggio a Londra</h1>
     </header>
     <main>
-        <img src="./images/londonSX.jpg" alt="London Image"/>
-        <img src="./images/londonCenter.jpg" alt="London Image"/>
-        <img src="./images/londonDX.jpg" alt="London Image"/>
+        <div></div>
+        <div></div>
+        <div></div>
         <section>
 
             <hr>
