implementate le 3 immagini

--- a/html-london-trip.html
+++ b/html-london-trip.html
@@ -11,9 +11,9 @@
         <h1>Il mio Viaggio a Londra</h1>
     </header>
     <main>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div id="destroide"></div>
+        <div id="centroide"></div>
+        <div id="sinomane"></div>
         <section>
 
             <hr>
